[package]
edition = "2021"
name = "polaris-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = {version = "1.4.0"}
schemars = {version = "0.8.16"}
serde = {version = "1.0.198", features = ["derive"]}
serde-duration-ext = {version = "0.1.0"}
serde_json = {version = "1.0.116"}
serde_yaml = {version = "0.9.34"}

uuid = {version = "1.8.0", features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

# async
tokio = {version = "1.37.0", features = ["full"]}

tower = {version = "0.4.13"}

# gRPC dep
log = {version = "0.4.21"}
once_cell = {version = "1.19.0"}
prost = {version = "0.12.4"}
prost-build = {version = "0.12.4"}
prost-types = {version = "0.12.4"}
tonic = {version = "0.11.0"}
futures = "0.3.30"
