[package]
edition = "2021"
name = "polaris-rust"
version = "0.2.0-alpha.0"

authors = ["polaris-contrib", "houseme <housemecn@gmail.com>", "liaochuntao <liaochuntao@live.com>"]
categories = ["network-programming", "development-tools"]
description = "Lightweight Rust SDK used as Proxyless Service Governance Solution."
documentation = "https://docs.rs/polaris-rust"
homepage = "https://polarismesh.cn"
keywords = ["polaris", "discovery", "configuration", "governance"]
license = "BSD 3 OR MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/polaris-contrib/polaris-rust"
# Crate build related
exclude = ["examples/*", "benches/*", "tests/*", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = {version = "1.4.0"}
schemars = {version = "0.8.16"}
serde = {version = "1.0.198", features = ["derive"]}
serde-duration-ext = {version = "0.1.0"}
serde_json = {version = "1.0.116"}
serde_yaml = {version = "0.9.34"}

uuid = {version = "1.8.0", features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

# cache
dashmap = {version = "5.4.0"}

# http
reqwest = {version = "0.12.8", features = ["blocking"]}

# async
async-trait = {version = "0.1"}
http = {version = "0.2.12"}
hyper = {version = "1.5.0", features = ["full"]}
tokio = {version = "1.37.0", features = ["full"]}
tokio-stream = {version = "0.1.16"}
tower = {version = "0.4.13"}

# gRPC dep
futures = {version = "0.3.30"}
once_cell = {version = "1.19.0"}
prost = {version = "0.12.4"}
prost-build = {version = "0.12.4"}
prost-types = {version = "0.12.4"}
tonic = {version = "0.11.0"}

# logging
tracing = {version = "0.1.36"}

# crypto
aes = {version = "0.7.4"}
base64 = {version = "0.22.1"}
block-modes = {version = "0.8.1"}
hex = {version = "0.4.3"}
rand = {version = "0.8.4"}
rsa = {version = "0.9.6"}

[dev-dependencies]
tracing-subscriber = {version = "0.3", features = ["default"]}

[[example]]
name = "discover"
path = "examples/discover.rs"

[[example]]
name = "config"
path = "examples/config.rs"
